# geo-aussales

./: .gitignore  README.md  main.py  pyproject.toml  setup.ps1  setup_dp.ps1
data_pipeline/: aoi_info.json  constants.py  run_pipeline.py  utils.py
data_pipeline/1_spatial_grid/: generate_h3_grid.py
data_pipeline/2_osm_features/: extract_osm_features.py  helpers.py
scripts/: cities.py  extract_pbf.sh  get_city_list.py  get_polygon.py
