[project]
name = "geo-aussales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black[jupyter]>=25.1.0",
    "contextily>=1.6.2",
    "geopandas>=1.1.1",
    "ipywidgets>=8.1.7",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyrosm>=0.6.2",
    "pytest>=8.4.1",
    "python-slugify>=8.0.4",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "srai[osm,plotting]>=0.9.7",
]
